# neural_nets_toys

./: Cargo.toml  LICENSE
.devcontainer/: Dockerfile  devcontainer.json
llm/: .gitignore  Cargo.toml
llm/src/: data.rs  llm.rs  main.rs  model.rs
rl_playground/: Cargo.toml
rl_playground/src/: agent.rs  main.rs  systems.rs  utils.rs
src/: lib.rs  main.rs
src/layers/: attention_layer.rs  fc_layer.rs  lnn_exp_layer.rs
